🎈 perf: 优化图片列表、查看大图卡顿问题

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "author": {
     "name": "mal",
-    "email": "381399021@qq.com"
+    "email": "admin@imlaun.com"
   },
   "homepage": "http://www.www.com",
   "build": {
